--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
