--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.7",
     "web-vitals": "^2.1.4"
